--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body>
 
 <h1>Hello WigiriWorld!</h1>
-<p>This is a pigiriparagraph.</p>
+<p>This is a pigiriparagraph.
+Yigiriyooo!
+</p>
 
 </body>
 </html>
